:package:build: update build config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && node scripts/generate-sitemap.mjs",
+    "build": "next build",
+    "build:static": "next build && node scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint"
   },
